--- a/FFF_Elis/FFF_Elis/Components/Layout/NavMenu.razor
+++ b/FFF_Elis/FFF_Elis/Components/Layout/NavMenu.razor
@@ -3,4 +3,5 @@
     <MudNavLink Href="counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Counter</MudNavLink>
     <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>
     <MudNavLink Href="swapy" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.SwapHoriz">Swapy Test Page</MudNavLink>
+    <MudNavLink Href="map" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Map">Map</MudNavLink>
 </MudNavMenu>
