--- a/FFF_Elis/FFF_Elis/Components/Pages/Swapy.razor
+++ b/FFF_Elis/FFF_Elis/Components/Pages/Swapy.razor
@@ -56,9 +56,9 @@
 </div>
 
 <script>
-    const container = document.getElementById('.container-1')
-    const container2 = document.getElementById('.container-2')
-    const enableInput = document.getElementById('#enable')
+    const container = document.getElementById('container-1')
+    const container2 = document.getElementById('container-2')
+    const enableInput = document.getElementById('enable')
 
     const swapy = swapy.createSwapy(container, {
         animation: 'dynamic',
