--- a/FFF_Elis/FFF_Elis/Components/App.razor
+++ b/FFF_Elis/FFF_Elis/Components/App.razor
@@ -10,6 +10,11 @@
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet"/>
     <link href="app.css" rel="stylesheet"/>
 
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
+    <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
+    
     <link rel="icon" type="image/png" href="favicon.ico"/>
     <HeadOutlet @rendermode="@InteractiveServer"/>
 </head>
