--- a/FFF_Elis/FFF_Elis/Components/Pages/Swapy.razor
+++ b/FFF_Elis/FFF_Elis/Components/Pages/Swapy.razor
@@ -60,7 +60,7 @@
     const container2 = document.getElementById('container-2')
     const enableInput = document.getElementById('enable')
 
-    const swapy = swapy.createSwapy(container, {
+    const swapy = Swapy.createSwapy(container, {
         animation: 'dynamic',
         continuousMode: false
     })
