--- a/FFF_Elis/FFF_Elis/Components/Dialogs/AddVehicleDialog.razor
+++ b/FFF_Elis/FFF_Elis/Components/Dialogs/AddVehicleDialog.razor
@@ -1,11 +1,12 @@
 ﻿@namespace FFF_Elis.Components.Dialogs
 @using ELISWCFService
+
 @code {
     
     [CascadingParameter]
     private MudDialogInstance MudDialog { get; set; }
     
-    public WCFFahrzeug Fahrzeug { get; set; }
+    public WCFFahrzeug Fahrzeug { get; set; } = new WCFFahrzeug();
     
     private void AddVehicle()
     {
@@ -15,6 +16,7 @@
     private void Cancel() => MudDialog.Cancel();
 
 }
+
 <MudDialog>
     <TitleContent>
         <h3>Add Vehicle</h3>
