--- a/FFF_Elis/FFF_Elis/Components/App.razor
+++ b/FFF_Elis/FFF_Elis/Components/App.razor
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html class="fro-dark-context" lang="en">
 
-<head>
+<head class="fro-dark-context">
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <base href="/"/>
@@ -16,10 +16,11 @@
     <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
     
     <link rel="icon" type="image/png" href="favicon.ico"/>
+    <link rel="stylesheet" href="styles/ds.css"/>
     <HeadOutlet @rendermode="@InteractiveServer"/>
 </head>
 
-<body>
+<body class="fro-dark-context">
 <Routes @rendermode="@InteractiveServer"/>
 <script src="_framework/blazor.web.js"></script>
 <script src="_content/MudBlazor/MudBlazor.min.js"></script>
