--- a/FFF_Elis/FFF_Elis/Components/Components/MapComponent.razor
+++ b/FFF_Elis/FFF_Elis/Components/Components/MapComponent.razor
@@ -1,4 +1,4 @@
-﻿<h3>Map</h3>
+﻿@inject IJSRuntime JS
 <div id="map" style="height: 100%"></div>
 
 <script>
@@ -19,15 +19,16 @@
         }
     });
 
-    var map = L.map('map').setView([48.236121, 14.123097], 13);
+    var map = L.map('map').setView([48.236121, 14.123097], 15);
     L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
         maxZoom: 19,
         attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
     }).addTo(map);
 
-    AddEinsatzToMap(48.236121, 14.123097, 'Einsatz 1');
+    AddEinsatzToMap(48.236121, 14.123097, 'FF Freiling');
 
     function AddWaypointsToMap(waypoints) {
+        console.log(waypoints);
         waypoints.forEach(waypoint => {
             L.Routing.control({
                 waypoints: [
