--- a/FFF_Elis/FFF_Elis/Components/Components/MapComponent.razor
+++ b/FFF_Elis/FFF_Elis/Components/Components/MapComponent.razor
@@ -1,5 +1,5 @@
 ﻿@inject IJSRuntime JS
-<div id="map" style="height: 100%"></div>
+<div id="map" style="height: 100%; color: black"></div>
 
 <script>
     var FWIcon = L.Icon.extend({
@@ -8,7 +8,8 @@
             iconAnchor:   [40, 20], // point of the icon which will correspond to marker's location
             popupAnchor:  [0, -10] // point from which the popup should open relative to the iconAnchor
         }
-    });        
+    });
+        
 
     var EinsatzIcon = L.Icon.extend({
         options:{
@@ -23,6 +24,14 @@
     L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
         maxZoom: 19,
         attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+    }).addTo(map);
+
+    L.Routing.control({
+        waypoints: [
+            L.latLng(48.236121, 14.123097),
+            L.latLng(48.226862, 14.161580)
+        ],
+        routeWhileDragging: true
     }).addTo(map);
 
     AddEinsatzToMap(48.236121, 14.123097, 'FF Freiling');
