FINALLY FIXED COMMUNICATION!!!!!!

--- a/FFF_Elis/FFF_Elis/Components/Components/RueckmeldeListe.razor
+++ b/FFF_Elis/FFF_Elis/Components/Components/RueckmeldeListe.razor
@@ -7,7 +7,7 @@
         switch (item.Status)
         {
             case RueckmeldungsStatus.Komme:
-                <a class="fro-list-item rueckmeldung-ja">
+                <a class="fro-list-item rueckmeldung-ja" style="margin-bottom: 0px;">
                     <i class="fro-icon fro-icon--fixed fro-list-item__icon" translate="no"
                     >user</i>
                     <div class="fro-list-item__label">@item.Name</div>
@@ -17,7 +17,7 @@
                 </a>
                 break;
             case RueckmeldungsStatus.Verfuegbar:
-                <a class="fro-list-item rueckmeldung-verfuegbar">
+                <a class="fro-list-item rueckmeldung-verfuegbar" style="margin-bottom: 0px;">
                     <i class="fro-icon fro-icon--fixed fro-list-item__icon" translate="no"
                     >user</i>
                     <div class="fro-list-item__label">@item.Name</div>
@@ -27,7 +27,7 @@
                 </a>
                 break;
             case RueckmeldungsStatus.NichtVerfuegbar:
-                <a class="fro-list-item rueckmeldung-nein">
+                <a class="fro-list-item rueckmeldung-nein" style="margin-bottom: 0px;">
                     <i class="fro-icon fro-icon--fixed fro-list-item__icon" translate="no"
                     >user</i>
                     <div class="fro-list-item__label">@item.Name</div>
