--- a/FFF_Elis/FFF_Elis/Components/Pages/Home.razor
+++ b/FFF_Elis/FFF_Elis/Components/Pages/Home.razor
@@ -4,7 +4,7 @@
 @using FFF_Elis.ELIS_Services
 @using FFF_Elis.Components.Components
 
-<EinsatzTimerComponent OnNewEinsatz="OnNewEinsatz"/>
+<EinsatzTimerComponent OnEinsatzClosed="OnEinsatzClosed" OnNewEinsatz="OnNewEinsatz"/>
 
 @if (EinsatzAnzeigen)
 {
@@ -34,27 +34,26 @@ else
     
     public List<VisualItem> VisualItems { get; set; } = new List<VisualItem>()
     {
-        new VisualItem() { Name = "PDF File", Type = VisualItemType.File, Url = "visualizationFiles/PRAT0118_SCAN_240709_105543.pdf", Duration = 30, Description = "Beispiel für PDF Datei" },
         new VisualItem() { Name = "Wetterbericht", Type = VisualItemType.Webpage, Url = "https://meteoblue.com/de/meteotv/af27d5", Duration = 10, Description = "Wetterbericht Freiling" },
         new VisualItem() { Name = "Homepage", Type = VisualItemType.Webpage, Url = "https://feuerwehr-freiling.at", Duration = 10, Description = "Homepage der FFF" },
     };
     
     private bool EinsatzAnzeigen { get; set; } = false;
     
-    public List<Einsatzrueckmeldung> Rueckmeldungen { get; set; } = new List<Einsatzrueckmeldung>()
-    {
-        {new Einsatzrueckmeldung(){Name = "Haunschmied Bastian", Status = RueckmeldungsStatus.Komme}},
-        {new Einsatzrueckmeldung(){Name = "Haunschmied Bastian", Status = RueckmeldungsStatus.Komme}},
-        {new Einsatzrueckmeldung(){Name = "Haunschmied Bastian", Status = RueckmeldungsStatus.Komme}},
-        {new Einsatzrueckmeldung(){Name = "Haunschmied Bastian", Status = RueckmeldungsStatus.Komme}},
-        {new Einsatzrueckmeldung(){Name = "Leutgöb Fabian", Status = RueckmeldungsStatus.Verfuegbar}},
-        {new Einsatzrueckmeldung(){Name = "Leutgöb Fabian", Status = RueckmeldungsStatus.Verfuegbar}},
-        {new Einsatzrueckmeldung(){Name = "Leutgöb Fabian", Status = RueckmeldungsStatus.Verfuegbar}},
-        {new Einsatzrueckmeldung(){Name = "Leutgöb Lukas", Status = RueckmeldungsStatus.NichtVerfuegbar}},
-        {new Einsatzrueckmeldung(){Name = "Leutgöb Lukas", Status = RueckmeldungsStatus.NichtVerfuegbar}},
-        {new Einsatzrueckmeldung(){Name = "Leutgöb Lukas", Status = RueckmeldungsStatus.NichtVerfuegbar}},
-        {new Einsatzrueckmeldung(){Name = "Leutgöb Lukas", Status = RueckmeldungsStatus.NichtVerfuegbar}},
-    };
+    public List<Einsatzrueckmeldung> Rueckmeldungen { get; set; } =
+    [
+        new Einsatzrueckmeldung() { Name = "Haunschmied Bastian", Status = RueckmeldungsStatus.Komme },
+        new Einsatzrueckmeldung() { Name = "Haunschmied Bastian", Status = RueckmeldungsStatus.Komme },
+        new Einsatzrueckmeldung() { Name = "Haunschmied Bastian", Status = RueckmeldungsStatus.Komme },
+        new Einsatzrueckmeldung() { Name = "Haunschmied Bastian", Status = RueckmeldungsStatus.Komme },
+        new Einsatzrueckmeldung() { Name = "Leutgöb Fabian", Status = RueckmeldungsStatus.Verfuegbar },
+        new Einsatzrueckmeldung() { Name = "Leutgöb Fabian", Status = RueckmeldungsStatus.Verfuegbar },
+        new Einsatzrueckmeldung() { Name = "Leutgöb Fabian", Status = RueckmeldungsStatus.Verfuegbar },
+        new Einsatzrueckmeldung() { Name = "Leutgöb Lukas", Status = RueckmeldungsStatus.NichtVerfuegbar },
+        new Einsatzrueckmeldung() { Name = "Leutgöb Lukas", Status = RueckmeldungsStatus.NichtVerfuegbar },
+        new Einsatzrueckmeldung() { Name = "Leutgöb Lukas", Status = RueckmeldungsStatus.NichtVerfuegbar },
+        new Einsatzrueckmeldung() { Name = "Leutgöb Lukas", Status = RueckmeldungsStatus.NichtVerfuegbar }
+    ];
 
     public List<Waypoint> Waypoints { get; set; } = new();
     
@@ -64,6 +63,11 @@ else
         Rueckmeldungen.Add(new Einsatzrueckmeldung() { Name = "Haunschmied Bastian", Status = (RueckmeldungsStatus)random.Next(1,3) });
     }
 
+    private void OnEinsatzClosed()
+    {
+        EinsatzAnzeigen = false;
+    }
+    
     private void OnNewEinsatz(WCFEinsatzdaten einsatzdaten)
     {
         Waypoints = new List<Waypoint>()
@@ -71,6 +75,7 @@ else
             new Waypoint() { lat = 48.236121f, lon = 14.123097f },
             new Waypoint() { lat = Convert.ToSingle(einsatzdaten.GPSLatitude), lon = Convert.ToSingle(einsatzdaten.GPSLatitude) },
         };
+        Einsatz = einsatzdaten;
         EinsatzAnzeigen = true;
     }
     
