--- a/FFF_Elis/FFF_Elis/Components/Layout/NavMenu.razor
+++ b/FFF_Elis/FFF_Elis/Components/Layout/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<MudNavMenu>
+﻿<MudNavMenu Style="background-color: var(--fro-background); color: var(--fro-text);">
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
     <MudNavLink Href="testing" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Testing</MudNavLink>
 </MudNavMenu>
