--- a/FFF_Elis/FFF_Elis/wwwroot/app.css
+++ b/FFF_Elis/FFF_Elis/wwwroot/app.css
@@ -83,3 +83,78 @@
     height: 90vh;
 }
 
+ /* Swapy */
+.swapy-container {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    width: 100%;
+    max-width: 500px;
+    padding: 10px;
+}
+
+.second-row {
+    display: flex;
+    gap: 5px;
+}
+
+.slot {
+    background: #111;
+    flex: 1;
+}
+
+.slot {
+    flex-basis: 100%;
+    height: 150px;
+}
+
+.item {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 40px;
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+}
+
+.item.a {
+    background: #b95050;
+}
+
+.item.b {
+    background: #50b97f;
+}
+
+.item.c {
+    background: #508db9;
+}
+
+.item.d {
+    background: #b95096;
+}
+
+[data-swapy-highlighted] {
+    background: #444;
+}
+
+.handle {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 20px;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.enable-input {
+    position: fixed;
+    top: 50px;
+    left: 0;
+    padding: 10px;
+}
+
