--- a/FFF_Elis/FFF_Elis/Components/Layout/MainLayout.razor
+++ b/FFF_Elis/FFF_Elis/Components/Layout/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<MudThemingProvider/>
+<MudThemeProvider/>
 <MudPopoverProvider/>
 <MudDialogProvider/>
 <MudSnackbarProvider/>
