--- a/FFF_Elis/FFF_Elis/Components/Pages/Testing.razor
+++ b/FFF_Elis/FFF_Elis/Components/Pages/Testing.razor
@@ -1,26 +1,15 @@
 ﻿@page "/Testing"
 @using ELISWCFService
 @using FFF_Elis.ELIS_Services
-<h3>Testing</h3>
+@using FFF_Elis.Components.Components
 
-<p>This is a test page.</p>
-
-@foreach(var einsatz in einsaetze)
-{
-    
-}
-
-<table></table>
-
+<EinsaetzeOOE/>
 
 @code {
-    public ElisClient ElisClient { get; set; } = new ElisClient();
-
     public List<WCFEinsatzdaten> einsaetze { get; set; } = new List<WCFEinsatzdaten>();
     
     protected override void OnInitialized()
     {
-        var einsaetze = ElisClient.Client.EinsatzDataGetAll(new EinsatzDataGetAllRequest(ElisClient.Ticket.TicketID)).EinsatzDataGetAllResult.ToList();
-        var fahrzeuge = ElisClient.Client.FahrzeugeGetByFeuerwehr(new FahrzeugeGetByFeuerwehrRequest(00123, ElisClient.Ticket.TicketID)).FahrzeugeGetByFeuerwehrResult;
+        
     }
 }
