--- a/FFF_Elis/FFF_Elis/Components/App.razor
+++ b/FFF_Elis/FFF_Elis/Components/App.razor
@@ -15,6 +15,8 @@
     <script src="leaflet/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
     
+    
+    
     <link rel="icon" type="image/png" href="favicon.ico"/>
     <link rel="stylesheet" href="styles/ds.css"/>
     <HeadOutlet @rendermode="@InteractiveServer"/>
@@ -24,6 +26,7 @@
 <Routes @rendermode="@InteractiveServer"/>
 <script src="_framework/blazor.web.js"></script>
 <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+<script src="index.js"></script>
 </body>
 
 </html>
