--- a/FFF_Elis/FFF_Elis/wwwroot/app.css
+++ b/FFF_Elis/FFF_Elis/wwwroot/app.css
@@ -161,3 +161,20 @@
     width: 100%;
 }
 
+.einsatzcard-container{
+
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    
+    overflow-y: scroll;
+    max-height: 90vh;
+
+    display: grid;
+
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+}
+
+.einsatzcard-container::-webkit-scrollbar {
+    display: none;
+}
