--- a/FFF_Elis/FFF_Elis/Components/Components/VisualItemComponent.razor
+++ b/FFF_Elis/FFF_Elis/Components/Components/VisualItemComponent.razor
@@ -17,6 +17,9 @@
         case VisualItemType.Text:
             <p>@_currentVisualItem.Description</p>
             break;
+        case VisualItemType.EinsatzOOE:
+            <EinsaetzeOOE />
+            break;    
         default:
             Console.WriteLine("Unknown VisualItemType");
             break;
