--- a/FFF_Elis/FFF_Elis/Components/App.razor
+++ b/FFF_Elis/FFF_Elis/Components/App.razor
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
     <script src="leaflet/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
-    
+    <script src="js/BoundaryCanvas.js"></script>
     
     
     <link rel="icon" type="image/png" href="favicon.ico"/>
