Initialized new Project structure

--- a/FFF_Elis/FFF_Elis/Components/Components/MapComponent.razor
+++ b/FFF_Elis/FFF_Elis/Components/Components/MapComponent.razor
@@ -1,5 +1,4 @@
-﻿@inject IJSRuntime JS
-<div id="map" style="height: 100%; color: black"></div>
+﻿<div id="map" style="height: 100%; color: black"></div>
 
 <script>
     FWIcon = L.Icon.extend({
