--- a/FFF_Elis/EPAS/Components/Account/Pages/Manage/ChangePassword.razor
+++ b/FFF_Elis/EPAS/Components/Account/Pages/Manage/ChangePassword.razor
@@ -1,6 +1,7 @@
 ﻿@page "/Account/Manage/ChangePassword"
 
 @using System.ComponentModel.DataAnnotations
+@using EPAS.Core.Models
 @using Microsoft.AspNetCore.Identity
 @using EPAS.Data
 
