--- a/FFF_Elis/EPAS/Components/Account/Pages/Manage/SetPassword.razor
+++ b/FFF_Elis/EPAS/Components/Account/Pages/Manage/SetPassword.razor
@@ -2,7 +2,7 @@
 
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Identity
-@using EPAS.Data
+@using EPAS.Core.Models
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
