Added Design From other Project

--- a/FFF_Elis/EPAS/Components/Account/Pages/AccessDenied.razor
+++ b/FFF_Elis/EPAS/Components/Account/Pages/AccessDenied.razor
@@ -1,4 +1,6 @@
 ﻿@page "/Account/AccessDenied"
+@using Microsoft.AspNetCore.Authorization
+@attribute [AllowAnonymous]
 
 <PageTitle>Access denied</PageTitle>
 
