--- a/FFF_Elis/EPAS/Components/Account/Shared/AccountLayout.razor
+++ b/FFF_Elis/EPAS/Components/Account/Shared/AccountLayout.razor
@@ -1,4 +1,6 @@
-﻿@inherits LayoutComponentBase
+﻿@using Microsoft.AspNetCore.Authorization
+@attribute [AllowAnonymous]
+@inherits LayoutComponentBase
 @layout EPAS.Components.Layout.MainLayout
 @inject NavigationManager NavigationManager
 
