--- a/FFF_Elis/EPAS/Components/Account/Pages/Register.razor
+++ b/FFF_Elis/EPAS/Components/Account/Pages/Register.razor
@@ -1,11 +1,12 @@
 ﻿@page "/Account/Register"
-
 @using System.ComponentModel.DataAnnotations
 @using System.Text
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
+@using Microsoft.AspNetCore.Authorization
 @using EPAS.Data
+@attribute [AllowAnonymous]
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IUserStore<ApplicationUser> UserStore
